syntax = "proto3";

option csharp_namespace = "MyGRPC";
import "google/protobuf/empty.proto";

package V1;

service Movies{
	rpc GetMoviesById(MoviewRequestModel) returns (MovieResponseModel); //Unary
	rpc GetMoviesFirst(google.protobuf.Empty) returns (stream MovieResponseModel); //Server Streaming
	rpc GetCategoryMovies(stream CategoryMoviewRequestModel) returns (stream MovieListModel); //Client Streaming
	rpc StartBiStreaming(stream BiStreamModel) returns (stream BiStreamModel); // Bi Directional Streaming
}

message MoviewRequestModel{
	int32 id = 1;
}

message CategoryMoviewRequestModel{
	int32 categoryId = 1;
}

message MovieListModel {
  repeated MovieResponseModel person = 1;
}

message MovieResponseModel{
	int32  id = 1 ;
	int32 categoryId =2;
	string code =3;
	string description =4;
	int64 rating = 5;
}

//Token ve Timeout ilede örnek yap
//bi directional ile örnek yap
//Client Streeam ile ilgili bir örnek yap